tests/suite/analyze/snapshots/suite__analyze__partial_redundancy_elimination__loop_invariant_in_cjump_anticipated.snap
---
source: tests/suite/analyze/partial_redundancy_elimination.rs
assertion_line: 175
expression: anticipated
---

                                                        loop_invariant_in_cjump


  +----------------------------------------------------------------------------------------------------------------------------------+
  |                                                                                                                                  |
  |                                                                +--------------------------------------------------------------+  |
  |                                                                |                            enter:                            |  |
  |                                                                | {(MEM (CONST 0))}                                            |  |
  |                                                                | (MOVE (TEMP _a) (MEM (CONST 0)))                             |  |
  |                                                                | {(ADD (TEMP _a) (CONST 1))}                                  |  |
  |                                                                | (MOVE (TEMP _index) (CONST 0))                               |  |
  |                                                                | {(ADD (TEMP _a) (CONST 1))}                                  |  |
  |                                                                | (JUMP r#while)                                               |  |
  |                                                                | {(ADD (TEMP _a) (CONST 1))}                                  |  |
  |                                                                +--------------------------------------------------------------+  |
  |                                                                  |                                                               |
  |                                                                  |                                                               |
  |                                                                  v                                                               |
+------------------------------------------------------------+     +--------------------------------------------------------------+  |
|                          r#false:                          |     |                                                              |  |
| {(ADD (TEMP _a) (CONST 1)), (ADD (TEMP _index) (CONST 1))} |     |                           r#while:                           |  |
| (MOVE (TEMP _index) (ADD (TEMP _index) (CONST 1)))         |     | {(ADD (TEMP _a) (CONST 1))}                                  |  |
| {(ADD (TEMP _a) (CONST 1))}                                |     | (CJUMP (GEQ (TEMP _index) (ADD (TEMP _a) (CONST 1))) r#true) |  |
| (JUMP r#while)                                             |     | {}                                                           |  |
| {(ADD (TEMP _a) (CONST 1))}                                | <-- |                                                              | <+
+------------------------------------------------------------+     +--------------------------------------------------------------+
                                                                     |
                                                                     |
                                                                     v
                                                                   +--------------------------------------------------------------+
                                                                   |                           r#true:                            |
                                                                   | {}                                                           |
                                                                   | (JUMP exit)                                                  |
                                                                   | {}                                                           |
                                                                   +--------------------------------------------------------------+
                                                                     |
                                                                     |
                                                                     v
                                                                   +--------------------------------------------------------------+
                                                                   |                            exit:                             |
                                                                   | {}                                                           |
                                                                   +--------------------------------------------------------------+

