tests/suite/analyze/snapshots/suite__analyze__partial_redundancy_elimination__used_on_one_branch_available.snap
---
source: tests/suite/analyze/partial_redundancy_elimination.rs
assertion_line: 54
expression: available
---

                                       used_on_one_branch

+--------------------------------------------+     +--------------------------------------------+
|                fallthrough:                |     |                   enter:                   |
| {(ADD (TEMP _b) (CONST 1))}                |     | {}                                         |
| (MOVE (TEMP _a) (ADD (TEMP _b) (CONST 1))) |     | (MOVE (TEMP _b) (CONST 0))                 |
| {(ADD (TEMP _b) (CONST 1))}                |     | {}                                         |
| (JUMP merge)                               |     | (CJUMP (EQ (CONST 0) (CONST 0)) branch)    |
| {(ADD (TEMP _b) (CONST 1))}                | <-- | {(ADD (TEMP _b) (CONST 1))}                |
+--------------------------------------------+     +--------------------------------------------+
  |                                                  |
  |                                                  |
  |                                                  v
  |                                                +--------------------------------------------+
  |                                                |                  branch:                   |
  |                                                | {(ADD (TEMP _b) (CONST 1))}                |
  |                                                | (MOVE (TEMP _a) (CONST 0))                 |
  |                                                | {(ADD (TEMP _b) (CONST 1))}                |
  |                                                | (JUMP merge)                               |
  |                                                | {(ADD (TEMP _b) (CONST 1))}                |
  |                                                +--------------------------------------------+
  |                                                  |
  |                                                  |
  |                                                  v
  |                                                +--------------------------------------------+
  |                                                |                   merge:                   |
  |                                                | {(ADD (TEMP _b) (CONST 1))}                |
  |                                                | (MOVE (TEMP _c) (ADD (TEMP _b) (CONST 1))) |
  |                                                | {(ADD (TEMP _b) (CONST 1))}                |
  |                                                | (JUMP exit)                                |
  +----------------------------------------------> | {(ADD (TEMP _b) (CONST 1))}                |
                                                   +--------------------------------------------+
                                                     |
                                                     |
                                                     v
                                                   +--------------------------------------------+
                                                   |                   exit:                    |
                                                   | {(ADD (TEMP _b) (CONST 1))}                |
                                                   +--------------------------------------------+

