tests/suite/analyze/snapshots/suite__analyze__partial_redundancy_elimination__used_on_one_branch_latest.snap
---
source: tests/suite/analyze/partial_redundancy_elimination.rs
assertion_line: 54
expression: latest
---

                                       used_on_one_branch

+--------------------------------------------+     +--------------------------------------------+
|                fallthrough:                |     |                   enter:                   |
| {(ADD (TEMP _b) (CONST 1))}                |     | {}                                         |
| (MOVE (TEMP _a) (ADD (TEMP _b) (CONST 1))) |     | (MOVE (TEMP _b) (CONST 0))                 |
| {}                                         |     | {}                                         |
| (JUMP merge)                               |     | (CJUMP (EQ (CONST 0) (CONST 0)) branch)    |
| {}                                         | <-- | {}                                         |
+--------------------------------------------+     +--------------------------------------------+
  |                                                  |
  |                                                  |
  |                                                  v
  |                                                +--------------------------------------------+
  |                                                |                  branch:                   |
  |                                                | {}                                         |
  |                                                | (MOVE (TEMP _a) (CONST 0))                 |
  |                                                | {(ADD (TEMP _b) (CONST 1))}                |
  |                                                | (JUMP merge)                               |
  |                                                | {}                                         |
  |                                                +--------------------------------------------+
  |                                                  |
  |                                                  |
  |                                                  v
  |                                                +--------------------------------------------+
  |                                                |                   merge:                   |
  |                                                | {}                                         |
  |                                                | (MOVE (TEMP _c) (ADD (TEMP _b) (CONST 1))) |
  |                                                | {}                                         |
  |                                                | (JUMP exit)                                |
  +----------------------------------------------> | {}                                         |
                                                   +--------------------------------------------+
                                                     |
                                                     |
                                                     v
                                                   +--------------------------------------------+
                                                   |                   exit:                    |
                                                   | {}                                         |
                                                   +--------------------------------------------+

